# so101-lab

./: .gitignore  CLAUDE.md  README.md  journal.md
app/: SPEC.md  UX.md
app/console/: .cta.json  .gitignore  README.md  package.json
app/console/src/: routeTree.gen.ts  server.ts
app/console/src/api/: contract.ts  live.ts  rig.ts
app/console/src/api/services/: cameras.ts  dataset-catalog.ts  driver-manager.ts  hf-hub.ts  record.ts  robot.ts  runs-registry.ts
app/console/src/components/: arm-panel.tsx  key-jog-pad.tsx
app/console/src/lib/: api.ts  queries.ts
app/console/src/routes/: __root.tsx  datasets.tsx  index.tsx  record.tsx  robot.tsx  trainings.$runId.tsx  trainings.index.tsx  trainings.new.tsx
app/driver/: .gitignore  driver.py  pyproject.toml  recorder.py  shared.py  teleop.py
app/driver/backends/: real.py  sim.py
app/driver/sources/: keys.py  scripted.py
notes/: crib-sheet.md  eval-checklist.md
phone_teleop/: .gitignore  README.md  b1_check.py  phone_debug.py  teleoperate.py
scripts/: camview.py  keytest.py  ping.py  review_frames.py  wiggle.py
sim/: README.md  run_sim.py  so101_mujoco_utils.py
